@@ -1,12 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX postgis_dbs 2096 SHA256 dafde4a1d1d95e18facb3287baddab3c1c116933498c310438c91dbd736833ec SHA512 5a11a3ce0153461f363d1b9a393dd10392e123c7b18b20610a5e26f2c7c6ed258a1517082a244c6ab5de40d439bc8a370848a0177c3c2ffcffc67a24fca8e66a WHIRLPOOL 8e4c34ac428c5ac887b414334fe80424b09845585596be1affaf69a9205af7dd183198eed44fa0406074ad1bcc133db8a9a13acd4a0882945b32ec8e0a480b61
 AUX postgis_dbs-1.4 2096 SHA256 287224c16cbd286c75098e786235ad07226217fbcf76071279081e6cb1d1add1 SHA512 520711a6165dbb08c7ce86001f885340b5dbc54efc2a863726b09d93db9e0d888c21fa5b466506456cacadd55db8531284c5b85f484c599d313f4d9aac56c1ef WHIRLPOOL 1b87d8edf109dd76a54a8c7819731a843e7ec139bcaef4b69605304a336eb3d558e656c1adf06ca487f1c5624c542634be7b885dd888e5ef4ec89e2970d38195
 DIST postgis-1.3.6.tar.gz 2227317 SHA256 d3b04d4a3439596a1f6368b0627f21762347cef1e0694d5471ef17c6a3b7d144 SHA512 0e98aeaf8c3c3ca1c51c617a6f50f066a69129b63721507708f02c69b5ff8e75c4b7b076f5075263ceedaf10904eaf950784b2c2f9f27ba3bb982f871b68fd4b WHIRLPOOL c45c611a992b044f63be3259c046f01e34b0772f2f95bf7fb7b71b54adef1c72aa3c86141bff8d305751e4598ee18a40e1ebc5439501b76e6c430c19c988d316
 DIST postgis-1.4.2.tar.gz 3276515 SHA256 5ce49b83b4c8f62eccb7080157f05299ff0e49c6ba06c3e1fa1ecfa2682c4d4b SHA512 3c27e8ed9eeb0e884190cdd5e4731989f9752e2ba449cdfe45d09cd638bd5b600d5cef16140e072d5e328cac035b2ffcc18392651c7306dcc4b5401429efc73e WHIRLPOOL 34a92d15018c5c414f93bf16c7cccb53af0943564b378bf2ca49d1692ebe51b9935214a5b2e2bddee716734954be7aabe0b4ce8b9c6b7d9cfbb801fa177bf5c4
 DIST postgis-1.5.3.tar.gz 3779956 SHA256 a2334f8b229446c0497d48a430a40152a3b71a5da02f414a0340a0a025d416cf SHA512 fe51f6cd452de577d361b56196adcacd6715f608c3e2d073375f36e35a6b47b5cc92f8232b9d1d29cd00d1f85c77dbd035379687f7a180074ee7dbd38ca8f3cd WHIRLPOOL 1139e63a8875c98c6f147cba1b3693602846b61c93d73cb561ef567b29f04f51558dfe8a09e0778247fa3b6fc7d221b5ea8df44862808272123c879b21e36589
 DIST postgis-2.0.0.tar.gz 5446748 SHA256 12179e24e348421c60c501590fda25bd349e2f697003958d9493f5c91b280081 SHA512 e6756d9bb2c88cb3cdbd7f74a8d4dff238b7e9e738468234045dce3646e211a28fd760f245cf93af55e096375de580a8283bc836c52ef216e060481dbe216894 WHIRLPOOL 18dac47cb4b3bc8104a79084da6bd32f32a58c3aaef5b96ee2ec67161d31ed0a4bd739e602a57d888f3b481e3b98ab2884ae8d9f8255c59b85e0f83222917d07
+DIST postgis-2.0.1.tar.gz 5373194 SHA256 32d181bbf0e648fe31c95b3dd23f7e4e49094d93cb4278fdf71c8feed4e9593c SHA512 c3dd03b8ae6e8917336bbaac0b91343f662d2477a7f54dcb823ef43f5433813615e992e729f2f1a30895c14a5039d3c34d9225e850f193192829380e043fc387 WHIRLPOOL a7df5478b3c23b652d48ac16d4f3fbc2d97bdb70ad5f1a450a3ad6142d977ae7de4cf5d2e53b6aee1a3beaf7feeccb12cc925a2cd08b6b5e74e2ca73e1d1786c
 EBUILD postgis-1.3.6-r1.ebuild 5595 SHA256 4cd4f8fa35064a3a34b873ad7e77dabead3b225bd7028ebbc95f3adc252fef13 SHA512 3eb25213a082b382efcd67ddead113d84928d730a6fa14dbb7a249757268170aef98350fe21d6b2eebaf5febb7bb9624bfef582d597bdee2a898af280267e864 WHIRLPOOL 5217be7480e86c55b51a2ce5fc4e7824ce07cf8af49f95f41c4793c805897a6213eabf4dacb9a1d61268388649115b32643859b54ccc43a45a423131a9e9e081
 EBUILD postgis-1.4.2-r1.ebuild 6696 SHA256 789cd4a5a6515f10946931330b4241c5bdd7f3a8519de059c290713532f2cc11 SHA512 1ebb80920c2d468aba3b31ceacfd5011fc3f8cc3f879506cdf80ca48bb080e01ad541f4844ab73c9635a68f360b8f229aca502e5c35ac4d2f07f52898be3df18 WHIRLPOOL 34ed155d44362eedb82df185203883963458c95598e88f48bb2ca2d604231655c5ae4120261f546a07a928bb13bed64e536ae4fd58dcb5bcd19e565f495c556f
 EBUILD postgis-1.5.3-r1.ebuild 6912 SHA256 8680d2bf4db5fc0ff1d1631e7ecf827aae1786f86c5a2f19951bd86a549a156f SHA512 93f568e74cfc1332554655b57963b7874fbd121f7b4904176a24ad7ed796b75fa25080eb82888197b84409a8dcd3da8833515fe5f44f4706851a7ef8b1854ad9 WHIRLPOOL f2e65ea8cedb7ca3ad86a8ba6d342e8c702c6d63aa84165496c0fbfa1e546eda2ffbaaa7a26b9afccc02e6f83d796eac7e6ccd48aafd256fac4306214b1baaf5
 EBUILD postgis-2.0.0.ebuild 6902 SHA256 0d86622a1664abf123041e04593f9921de31adfea5c2aff1902fce3febf768ea SHA512 7c0be43a55472719ae0661c86cc30b128eb10157d97e50580d2068ab50dc041a6212276b6de47c8a3aa562696bd39b991e30b49e3a57a9a2b2fe211fdc0c0d49 WHIRLPOOL 7a6d10ff2ccce41fbe4943269fe80e9e616023e89006bb465f08ab965e531c712ad0acac2e01aac2acfd9bd6b2903f13656e48a2242f043f8dca8250c706e7de
-MISC ChangeLog 9396 SHA256 781781c36424c13d70337368065e35d3e602fdf16c29e0b9cf28db6a7880bbef SHA512 cc59df9fec710c6a6935e027710dd8d44ccb213ffc4ca78250ef3a5b4d49ff0375037093637ec0b15c914ef4ef46e687776535f9bae9b9328c23305bd59c11e6 WHIRLPOOL ee65574d66dba48a19259abc125cd33a262387c09610bf7e6829739e4a8c6754739e8a9c0aa484bbaa8e098f637ff6584723ded7c45bfe40814a9059babed233
+EBUILD postgis-2.0.1.ebuild 6940 SHA256 9efd22561d29852b527342a366d922671925407fc3ac959bde801bd444554f5b SHA512 173e73c3b8a95ecc92da7025b23b84144fb43b91a1c2415287c9f657f6e783222558e395b0931620ed3d7d6b0580c92d57d08470067a3ff5596407c0ff447ef0 WHIRLPOOL 481baf70cb12848cda2aaef8106d2118408726ec706ee5f8c0f61407bd410800c5b4628133515b3b6a956c4ba0de173fde5c7cc729f2d445cc2bf607b267a31a
+MISC ChangeLog 9543 SHA256 20d1378d9d5f9c31c1b0baedf85df1c2750d96ed7eb1860e5d884efcde691162 SHA512 e73d54f31a08779988b36b71924230611a8b5863572120b885aeedbad5c88d8664a5c081f7ea59b94a24cafcea388f59607a676d86bf6aac46ad4bdb7009df6c WHIRLPOOL af91973c3d64d12d09147a9e5d677c2a163aac2bb37d1cce60113f6f91e64cd5b59a31b083187d8731ca1bf86f4c399c32467af719408746cf48491e96ef2f23
 MISC metadata.xml 481 SHA256 d0ab8dbe26001259f36c968e1d48ad5fda768227d99319cf4302af804a08d5ef SHA512 5299745d72d13ccc71d5f6eee5d343268a59f57ac208621c81643e7f2160b66382c3dd0bf07c97f4cefaebfbbbfc5e11e6b84318f5fc536877f123be2fd7743e WHIRLPOOL 257b7f00ffcd56df202c0e1cd75383bf7ed9b0c854cadb9371a281bbd200b8686c70d3d28cadd06756510f9d6536ee64c636a12f5170ce5c608e82d1148ba9fe
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iF4EAREIAAYFAlAP6YIACgkQVxOqA9G7/aC2bgD/URmEiy7xp11vasliW0SqVjTc
+rTyfeh3peNR0F3am8IEA/AymPqM71uv1dyOqkM7VYGWQFL1I6ltIkA2Kq1fymaip
+=si7s
+-----END PGP SIGNATURE-----
